Set `--add-opens` to run tests on Java 17